[gd_scene load_steps=30 format=2]

[ext_resource path="res://entities/enemies/mole/scripts/ATTACK.gd" type="Script" id=1]
[ext_resource path="res://entities/classes/statemachinee/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/mole/mole.gd" type="Script" id=3]
[ext_resource path="res://entities/enemies/mole/mole.png" type="Texture" id=4]
[ext_resource path="res://entities/enemies/mole/scripts/IDLE.gd" type="Script" id=5]
[ext_resource path="res://entities/enemies/mole/scripts/WALK.gd" type="Script" id=6]
[ext_resource path="res://worlds/classes/areaTrigger/areaTrigger.gd" type="Script" id=7]
[ext_resource path="res://entities/enemies/mole/scripts/TOATTACK.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Mole:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Mole:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Mole:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotationTarget")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10, 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Mole:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "toattack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Mole:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Mole:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "toattack"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=17]
states/attack/node = SubResource( 6 )
states/attack/position = Vector2( 696.333, 211.444 )
states/idle/node = SubResource( 7 )
states/idle/position = Vector2( 495, 212.333 )
states/toattack/node = SubResource( 8 )
states/toattack/position = Vector2( 697.667, 81.2222 )
states/walk/node = SubResource( 9 )
states/walk/position = Vector2( 496.333, 80.3333 )
transitions = [ "walk", "idle", SubResource( 10 ), "idle", "walk", SubResource( 11 ), "idle", "toattack", SubResource( 12 ), "walk", "toattack", SubResource( 13 ), "toattack", "attack", SubResource( 14 ), "attack", "idle", SubResource( 15 ), "attack", "walk", SubResource( 16 ) ]
start_node = "idle"
graph_offset = Vector2( 0, -86.3421 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=18]

[sub_resource type="CircleShape2D" id=19]
radius = 24.0

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 72, 12 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 20, 20 )

[node name="mole" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource( 3 )
stateMachinePath = NodePath("StateMachine")
ACCELERATION = 10
GRAVITY = 20
MAXSPEED = 25
MAXFALL = 500
attackAreaArray = [ NodePath("AreaTrigger") ]
spritePath = NodePath("Mole")
animationTreePath = NodePath("AnimationTree")
flipArea = true
rotationTarget = 10

[node name="Mole" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
offset = Vector2( 0, -32 )
hframes = 5
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/toattack = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
startingState = NodePath("IDLE")

[node name="IDLE" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="WALK" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="TOATTACK" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="ATTACK" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 17 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 18 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( 32, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -24 )
shape = SubResource( 19 )

[node name="AreaTrigger" type="Area2D" parent="."]
position = Vector2( 80, -48 )
collision_layer = 0
collision_mask = 1024
monitorable = false
script = ExtResource( 7 )
objectPath = NodePath("..")
methodName = "attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTrigger"]
position = Vector2( 0, 4 )
shape = SubResource( 20 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="attack" type="Area2D" parent="."]
position = Vector2( 32, -32 )
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
position = Vector2( -4, -4 )
shape = SubResource( 21 )
disabled = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, -44 )
scale = Vector2( 3.2, 4.4 )
process_parent = true
physics_process_parent = true

[connection signal="area_exited" from="AreaTrigger" to="." method="_on_AreaTrigger_area_exited"]
[connection signal="area_entered" from="attack" to="." method="_on_attack_area_entered"]
